Fixed width and overlapping in Next Videos Section

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -50,3 +50,9 @@
   }
 }
 
+@include desktop {
+  .hero {
+    max-width: 1920px; 
+    margin: 0 auto;
+  }
+}
