--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -83,7 +83,7 @@
 
 @include desktop {
   .video-list {
-    width: 50rem;
+    width: 40vw;
     padding: 2.25rem 14rem 0 0;
 
     &__header {
