--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -14,7 +14,13 @@
 
 /*desktop*/
 @mixin desktop {
-  @media only screen and (min-width: 1440px) {
+  @media only screen and (min-width: 1440px) and (max-width: 1920px) {
     @content;
   }
 }
+
+// @mixin desktop {
+//   @media only screen and (min-width: 1440px) {
+//     @content;
+//   }
+// }
